tests/pos/i1137-1/A_1.scala
class A(val self: Double) extends AnyVal
