tests/neg/i1670.scala
class A(a:Int, b:Int) extends AnyVal